k8s/clusters/homelabrestore01/apps/tdarr/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: restore-tdarr
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.31
